prevented monsters from overlapping UI in selection results

--- a/app/Pokeperu/battle/selectionResults.css
+++ b/app/Pokeperu/battle/selectionResults.css
@@ -35,7 +35,7 @@
 /* Shared monster block styling */
 .monster-trainer-container {
   display: flex;
-  margin: 0 24px;
+  margin: 10px 24px;
   width: 100%;
   justify-content: center; /* Center horizontally in the Col */
 }
@@ -45,7 +45,7 @@
   z-index: 2;
   position: absolute;
   left: 80px;
-  top: 60px;
+  top: 50px;
   width: 170px;
   height: 170px;
   object-fit: contain;
@@ -56,7 +56,7 @@
   z-index: 2;
   position: absolute;
   right: 80px;
-  top: 60px;
+  top: 50px;
   width: 170px;
   height: 170px;
   object-fit: contain;
